fixed gap

--- a/GitHubUserSearchApp/wwwroot/Sass/_Global.scss
+++ b/GitHubUserSearchApp/wwwroot/Sass/_Global.scss
@@ -306,13 +306,14 @@ body {
             border-radius: 10px;
             padding: 17px 0 17px 32px;
             display: flex;
-            justify-content: space-around;
+            gap: 90px;
             color: $white;
             margin-top: 25px;
             margin-bottom: 37px;
 
             @media (max-width: 769px) {
                 padding: 18px 15px;
+                justify-content: space-around;
             }
 
             .title {
