--- a/GitHubUserSearchApp/wwwroot/Sass/styles.css
+++ b/GitHubUserSearchApp/wwwroot/Sass/styles.css
@@ -374,7 +374,7 @@ body {
   border-radius: 10px;
   padding: 17px 0 17px 32px;
   display: flex;
-  justify-content: space-around;
+  gap: 90px;
   color: #FFFFFF;
   margin-top: 25px;
   margin-bottom: 37px;
@@ -382,6 +382,7 @@ body {
 @media (max-width: 769px) {
   .info-section .user-info .info-repo {
     padding: 18px 15px;
+    justify-content: space-around;
   }
 }
 .info-section .user-info .info-repo .title {
